<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PairDeviceActivity">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/incorrect_code_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numeric_code_failure_text"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="32sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/confirmed_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_code_success_text"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="32sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/numeric_code_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/numeric_code_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numeric_comparison_value_label"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/numeric_code_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="numeric code"
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="40sp"
                tools:text="888888" />
        </LinearLayout>

        <TextView
            android:id="@+id/waiting_for_code_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/waiting_for_code_text"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="32sp" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>